@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-7
-Date: 2012-03-14
+Date: 2012-03-15
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
